--- a/index.html
+++ b/index.html
@@ -9,14 +9,19 @@
   </head>
   <body>
     <main>
+      <h1>A Domain of One's Own</h1>
       <div id="container">
-        <h1>A Domain of One's Own</h1>
+        <div>
         <div class="box" id="b1">
-          <div class="item" id="item"></div>
+          <div class="item" id="item">Drag Me</div>
         </div>
         <div class="box" id="b2"></div>
         <div class="box" id="b3"></div>
-        <div class="cal"><a href="https://www.google.com">link</a></div>
+        <div class="splash">
+          <p>Splash screen test test</p>
+        </div>
+        <a href="https://www.google.com"><div class="cal"></div></a>
+        <a href="/bookshelf.html"><div class="book-links"></div></a>
       </div>
     </main>
     <script src="sketch.js"></script>
