--- a/bookshelf.html
+++ b/bookshelf.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <main>
-    <h1><a href="index.html">Back</a></h1>
+    <h1><a href="/index.html">Back</a></h1>
       <div class="bookshelf-container">
       </div>
     </main>
