--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <p>Splash screen test test</p>
         </div>
         <a href="https://www.google.com"><div class="cal"></div></a>
-        <a href="/bookshelf.html"><div class="book-links"></div></a>
+        <a href="./bookshelf.html"><div class="book-links"></div></a>
       </div>
     </main>
     <script src="sketch.js"></script>
