add plant, bookmark logic

--- a/index.html
+++ b/index.html
@@ -9,16 +9,19 @@
   </head>
   <body>
     <main>
-        <h1>A Domain of One's Own</h1>
+        <div class="splash">hello helo</div>
       <div id="container">
-        <div>
+        <div class="bookmark-container">
+          <h1>A Domain of One's Own</h1>
+        </div>
         <div class="box" id="b1">
           <div class="item" id="item">Drag Me</div>
         </div>
         <div class="box" id="b2"></div>
-
+        <div>
         <a href="https://www.google.com"><div class="cal"></div></a>
         <a href="./bookshelf.html"><div class="book-links"></div></a>
+        <a href="./bookshelf.html"><div class="plant-links"></div></a>
       </div>
     </main>
     <script src="sketch.js"></script>
