--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div>
         <a href="https://www.google.com"><div class="cal"></div></a>
         <a href="./bookshelf.html"><div class="book-links"></div></a>
-        <a href="./bookshelf.html"><div class="plant-links"></div></a>
+        <a href="./plant.html"><div class="plant-links"></div></a>
       </div>
     </main>
     <script src="sketch.js"></script>
