--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
         </div>
         <div class="box" id="b2"></div>
         <div>
-        <a href="https://www.google.com"><div class="cal"></div></a>
+        <a href="./calendar.html"><div class="cal"></div></a>
         <a href="./bookshelf.html"><div class="book-links"></div></a>
         <a href="./plant.html"><div class="plant-links"></div></a>
       </div>
     </main>
-    <script src="sketch.js"></script>
+    //<script src="sketch.js"></script>
   </body>
 </html>
