--- a/calendar.html
+++ b/calendar.html
@@ -9,13 +9,11 @@
   </head>
   <body>
     <main>
-      <div id="container">
-        <h1 class ="back-link"><a href="./index.html">Back</a></h1>
-        <div class="cal-container">
-          <!--<img src="assets/calendar.jpg">-->
-        </div>
+        <!--<div class="splash">hello helo</div>-->
+      <div class="text-container">
+          <h1><a href="./index.html">Back</a></h1>
       </div>
     </main>
-    <script src="./calendar.js"></script>
+    <script src="calendar.js"></script>
   </body>
 </html>
