--- a/index.html
+++ b/index.html
@@ -9,21 +9,14 @@
   </head>
   <body>
     <main>
-        <div class="splash">hello helo</div>
-      <div id="container">
-        <div class="bookmark-container">
+        <!--<div class="splash">hello helo</div>-->
+      <div class="text-container">
           <h1>A Domain of One's Own</h1>
-        </div>
-        <div class="box" id="b1">
-          <div class="item" id="item">Drag Me</div>
-        </div>
-        <div class="box" id="b2"></div>
-        <div>
+      </div>
         <a href="./calendar.html"><div class="cal"></div></a>
         <a href="./bookshelf.html"><div class="book-links"></div></a>
         <a href="./plant.html"><div class="plant-links"></div></a>
-      </div>
     </main>
-    //<script src="sketch.js"></script>
+    <script src="sketch.js"></script>
   </body>
 </html>
