--- a/plant.html
+++ b/plant.html
@@ -9,10 +9,10 @@
   </head>
   <body>
     <main>
-      <div id="container">
-        <h1 class ="back-link"><a href="./index.html">Back</a></h1>
-        </div>
-    </div>
+        <!--<div class="splash">hello helo</div>-->
+      <div class="text-container">
+          <h1><a href="./index.html">Back</a></h1>
+      </div>
     </main>
     <script src="plant.js"></script>
   </body>
