button and text styling

--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
   </head>
   <body>
     <main>
-        <!--<div class="splash">hello helo</div>-->
+      <div class="splash">
+        <p>There's a party going on. The flashing lights may be a hazard. Please proceed with caution.</p>
+      </div>
       <div class="text-container">
           <h1>A Domain of One's Own</h1>
+          <p class="left-text">Welcome. You may be sitting somewhere similar to this. Time passes here. Take a look around. Engage with what you see.</p>
       </div>
         <a href="./calendar.html"><div class="cal"></div></a>
         <a href="./bookshelf.html"><div class="book-links"></div></a>
