--- a/plant.html
+++ b/plant.html
@@ -9,10 +9,10 @@
   </head>
   <body>
     <main>
-        <!--<div class="splash">hello helo</div>-->
       <div class="text-container">
-          <h1><a href="./index.html">Back</a></h1>
-      </div>
+        <a class="left-text" id = 'back-btn' href="./index.html">Back</a>
+        <p class="left-text">It's nice to take care of something. Remeber to return each item when you're done.</p>
+    </div>
     </main>
     <script src="plant.js"></script>
   </body>
