--- a/bookshelf.html
+++ b/bookshelf.html
@@ -9,10 +9,10 @@
   </head>
   <body>
     <main>
-        <!--<div class="splash">hello helo</div>-->
       <div class="text-container">
-          <h1><a href="./index.html">Back</a></h1>
-      </div>
+        <h1 class="left-text" id="back-btn"><a href="./index.html">Back</a></h1>
+        <p class="left-text">Browse at your own pace.</p>
+    </div>
     </main>
     <script src="bookshelf.js"></script>
   </body>
