--- a/calendar.html
+++ b/calendar.html
@@ -9,10 +9,10 @@
   </head>
   <body>
     <main>
-        <!--<div class="splash">hello helo</div>-->
       <div class="text-container">
-          <h1><a href="./index.html">Back</a></h1>
-      </div>
+        <a class="left-text" href="./index.html">Back</a>
+        <p class="left-text">Add to the calendar using the schedule button. Get coffee with a friend. Make an appointment to get a haircut. Delete every event on a Friday. It's up to you</p>
+    </div>
     </main>
     <script src="calendar.js"></script>
   </body>
