--- a/bookshelf.html
+++ b/bookshelf.html
@@ -11,7 +11,9 @@
     <main>
       <div class="text-container">
         <h1 class="left-text" id="back-btn"><a href="./index.html">Back</a></h1>
-        <p class="left-text">Browse at your own pace.</p>
+        <p class="left-text">Select a book from the shelf.
+
+        </br><br>Save one quote to keep with you.</p>
     </div>
     </main>
     <script src="bookshelf.js"></script>
