commit to revert

--- a/calendar.html
+++ b/calendar.html
@@ -11,7 +11,8 @@
     <main>
       <div class="text-container">
         <a class="left-text" href="./index.html">Back</a>
-        <p class="left-text">Add to the calendar using the schedule button. Get coffee with a friend. Make an appointment to get a haircut. Delete every event on a Friday. It's up to you</p>
+
+        <p class="left-text">Add to the calendar using the input box and the schedule button. Get coffee with a friend. Make an appointment to get a haircut. Set a goal. It's up to you.</p>
     </div>
     </main>
     <script src="calendar.js"></script>
