--- a/plant.html
+++ b/plant.html
@@ -11,7 +11,8 @@
     <main>
       <div class="text-container">
         <a class="left-text" id = 'back-btn' href="./index.html">Back</a>
-        <p class="left-text">It's nice to take care of something. Remeber to return each item when you're done.</p>
+        <p class="left-text">It's nice to take care of something.
+        </p>
     </div>
     </main>
     <script src="plant.js"></script>
